# iPhone-Photos-Manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
iphone_photos_manager/: __init__.py  photos_sqlite_client.py
iphone_photos_manager/media_entities/: __init__.py  media_album.py  media_asset.py  media_folder.py
iphone_photos_manager/photo_entities/: __init__.py  photo.py  photo_album.py  photo_folder.py
iphone_photos_manager/ult/: general.py
iphone_photos_manager/utils/: general.py
iphone_photos_manager/utils/file_tool/: __init__.py  copy_data.py  metadata.py
py_scripts/: fetch_album_metadata.py  get_photo_folders_and_albums.py  read_media_meta_data.py  use_photos_sqlite_client.py
py_scripts/notebooks/: debug_sqlite_client.ipynb
